trunk/Archive2/b8/aeb99eec58b253/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'void addMapping(const K&, const V&, std::map<K, V>&)':
main.cpp:10:47: error: wrong number of template arguments (1, should be 4)
     std::pair< std::map<typename K, typename V>::iterator, bool > ret;
                                               ^
In file included from /usr/include/c++/4.8/map:61:0,
                 from main.cpp:2:
/usr/include/c++/4.8/bits/stl_map.h:96:11: error: provided for 'template<class _Key, class _Tp, class _Compare, class _Alloc> class std::map'
     class map
           ^
main.cpp:10:65: error: template argument 1 is invalid
     std::pair< std::map<typename K, typename V>::iterator, bool > ret;
                                                                 ^
main.cpp:10:70: error: invalid type in declaration before ';' token
     std::pair< std::map<typename K, typename V>::iterator, bool > ret;
                                                                      ^
